# b2b-starter-medusa

./: .dockerignore  .env.example  .env.multicloud  .eslintrc.js  .gitignore  .prettierrc  .tsbuildinfo  ADMIN_AVAILABLE.md  ADMIN_REVIEW_2025-10-13.md  ANALISE_APIS_PRODUTOS_IMAGENS_360.md  APIS_V4_COMPLETE_GUIDE.md  AWS_SSO_GODADDY_DEPLOYMENT.md  BACKEND_100_FUNCIONAL.md  CATALOG_IMPORT_SUMMARY.md  CATALOG_MIGRATION_SUMMARY.md  CLAUDE.md  CLOUDSHELL_ANALYSIS.sh  CLOUDSHELL_CHECK_LATEST.sh  COBERTURA_360_LOCAL_DOCKER.md  CONNECT_BASTION_DIRECT.md  CONNECT_NOW.md  CREDENTIALS_CONFIRMED.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_OPTIMIZATION_SUMMARY.md  DESIGN_SYSTEM_IMPLEMENTATION.md  DEV_STATUS.md  DIAGNOSTICO_BACKEND_FALHA.md  DIAGNOSTICO_INTEGRACAO_BACKEND_STORE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_APIS.md  E2E_TESTS_360_COVERAGE.md  EMAIL_DOMAIN_UPDATE_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_DELIVERY_EXECUTIVE_SUMMARY.md  FIX_ADMIN_BLANK_SCREEN.md  FOSS_IMPLEMENTATION_COMPLETE.md  FOSS_STACK_COMPLETE.md  FOSS_STACK_IMPLEMENTATION.md  FOSS_STACK_INDEX.md  FOSS_STACK_MIGRATION_SUMMARY.md  (+78 more)
data-platform/dagster/: Dockerfile  dagster.yaml  definitions.py  definitions.py.bak  pyproject.toml  requirements.txt  workspace.yaml
data-platform/dagster/assets/: __init__.py  catalog.py  erp_sync.py  erp_sync.py.bak  examples_ollama.py  helio_kb.py  tarifas.py
data-platform/dagster/resources/: __init__.py  ollama.py  pinecone.py  postgres.py  qdrant.py
data-platform/dagster/tmp22icgbsz/history/: runs.db
data-platform/dagster/tmp22icgbsz/schedules/: schedules.db
(+5711 files in other folders)
